// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot data renders 1`] = `
<div>
  <nav
    className="navbar navbar-dark fixed-top custom-style"
  >
    <div
      className="container-fluid"
    >
      <svg
        className="menu-style"
        color="#fff"
        fill="currentColor"
        height={35}
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": "#fff",
          }
        }
        viewBox="0 0 1024 1024"
        width={35}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
        />
      </svg>
      <img
        alt="logo"
        className="d-inline-block align-top"
        height="48"
        src="logo.png"
        width="48"
      />
    </div>
  </nav>
  <div>
    <div
      className="headerContainer"
    >
      <div>
        <nav
          aria-label="breadcrumb"
        >
          <ol
            className="breadcrumb"
          >
            <li
              className="breadcrumb-item"
            >
              Rundum mobil
            </li>
            <li
              className="breadcrumb-item"
            >
              Preis- und Umweltvergleich
            </li>
          </ol>
        </nav>
      </div>
      <div>
        <div>
          <span
            className="title"
          >
            Umweltrechner
          </span>
        </div>
        <div
          className="subtitle"
        >
          <span>
            Umwelt und Preisvergleich zwischen VVS und Deinem Auto
          </span>
        </div>
      </div>
    </div>
    <div
      className="slide-and-search"
    >
      <div
        className="slide"
      >
        <svg>
          header-slider-image-1.svg
        </svg>
      </div>
      <div
        className="search-location"
      >
        <div
          className="card-title"
        >
          Wähle Deine Pendelroute 
        </div>
        <div>
          <p
            className="card-subtitle"
          >
            um zu sehen, wie viel CO2 Du mit VVS sparen kannst
          </p>
        </div>
        <div
          className="input-container"
        >
          <div
            className="icons-column"
          >
            <svg
              className="top-icon"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 56c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m0-48C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 168c-44.183 0-80 35.817-80 80s35.817 80 80 80 80-35.817 80-80-35.817-80-80-80z"
              />
            </svg>
            <div
              className="vertical-line"
            />
            <svg
              className="bottom-icon"
              fill="currentColor"
              height={20}
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 512 512"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 32C167.67 32 96 96.51 96 176c0 128 160 304 160 304s160-176 160-304c0-79.49-71.67-144-160-144zm0 224a64 64 0 1164-64 64.07 64.07 0 01-64 64z"
              />
            </svg>
          </div>
          <div
            className="input-group"
          >
            <input
              className="input-style"
              name="startPoint"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="von : Ort, Haltestelle, Adresse, POI"
              value=""
            />
            <input
              className="input-style"
              name="endPoint"
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="von : Ort, Haltestelle, Adresse, POI"
              value=""
            />
          </div>
          <div
            className="right-arrow"
          >
            <div />
            <div>
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M11.95 7.95l-1.414 1.414L8 6.828 8 20H6V6.828L3.465 9.364 2.05 7.95 7 3l4.95 4.95zm10 8.1L17 21l-4.95-4.95 1.414-1.414 2.537 2.536L16 4h2v13.172l2.536-2.536 1.414 1.414z"
                  />
                </g>
              </svg>
            </div>
            <div />
          </div>
        </div>
        <button
          className="weiterBtn"
          onClick={[Function]}
        >
          Weiter
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshot renders when navigate add route 1`] = `
<div>
  <nav
    className="navbar navbar-dark fixed-top custom-style"
  >
    <div
      className="container-fluid"
    >
      <svg
        className="menu-style"
        color="#fff"
        fill="currentColor"
        height={35}
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": "#fff",
          }
        }
        viewBox="0 0 1024 1024"
        width={35}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M904 160H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0 624H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8zm0-312H120c-4.4 0-8 3.6-8 8v64c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-64c0-4.4-3.6-8-8-8z"
        />
      </svg>
      <img
        alt="logo"
        className="d-inline-block align-top"
        height="48"
        src="logo.png"
        width="48"
      />
    </div>
  </nav>
  <div>
    <div
      className="headerContainer"
    >
      <div>
        <nav
          aria-label="breadcrumb"
        >
          <ol
            className="breadcrumb"
          >
            <li
              className="breadcrumb-item"
            >
              Rundum mobil
            </li>
            <li
              className="breadcrumb-item"
            >
              Preis- und Umweltvergleich
            </li>
          </ol>
        </nav>
      </div>
      <div>
        <div>
          <span
            className="title"
          >
            Umweltrechner
          </span>
        </div>
        <div
          className="subtitle"
        >
          <span>
            Penden
          </span>
          <span>
            <a
              className="link-subtitle"
              href="#"
            >
              210 Tag
            </a>
             
          </span>
          <span>
            mit
          </span>
          <span>
            <a
              className="link-subtitle"
              href="#"
            >
              Miteklase
            </a>
             
          </span>
          <span>
            von
          </span>
          <span>
            <a
              className="link-subtitle"
              href="#"
            >
              Tam
            </a>
             
          </span>
          <span>
            bis
          </span>
          <span>
            <a
              className="link-subtitle"
              href="#"
            >
              Statmit
            </a>
             
          </span>
        </div>
      </div>
    </div>
    <div
      className="bar-container"
    >
      <div
        className="distance-bar"
      >
        <div
          className="car"
        >
          <svg>
            car-icon.svg
          </svg>
          <p>
            24.1 km
          </p>
        </div>
        <div
          className="bus"
        >
          <svg>
            bus-icon.svg
          </svg>
          <p>
            24.8 km
          </p>
        </div>
      </div>
      <div
        className="triangle-container"
      >
        <div
          className="triangle"
        />
      </div>
    </div>
    <div
      className="card-container"
    >
      <div
        className="details-card-subtitle"
      >
        <div
          className="custom-card-subtitle"
        >
          Auswirkungen auf die Umwelt
        </div>
        <div
          className="custom-card-group"
        >
          <div
            className="details-card details-card-custom-style1"
            style={
              Object {
                "backgroundColor": "",
              }
            }
          >
            <div
              className="details-card-title"
            >
              <img
                alt="logo-icon"
                height="24"
                src="car-icon.png"
                width="24"
              />
              <div
                className="card-inner-title"
              >
                 
                Auto
              </div>
            </div>
            <div
              className="card-weight"
            >
              2.032 kg
            </div>
            <div
              className="card-time"
            >
              CO2 / Jahr
            </div>
          </div>
          <div
            className="details-card details-card-custom-style2"
            style={
              Object {
                "backgroundColor": "#fc631e",
              }
            }
          >
            <div
              className="details-card-title"
            >
              <img
                alt="logo-icon"
                height="24"
                src="logo-icon.png"
                width="24"
              />
              <div
                className="card-inner-title"
              >
                 
                VVS Abo
              </div>
            </div>
            <div
              className="card-weight"
            >
              758 kg
            </div>
            <div
              className="card-time"
            >
              CO2 / Jahr
            </div>
          </div>
        </div>
      </div>
      <div
        className="details-card-subtitle"
      >
        <div
          className="custom-card-subtitle"
        >
          Kosteneinschätzung für ein Jahr
        </div>
        <div
          className="custom-card-group"
        >
          <div
            className="details-card details-card-custom-style1"
            style={
              Object {
                "backgroundColor": "",
              }
            }
          >
            <div
              className="details-card-title"
            />
          </div>
          <div
            className="details-card details-card-custom-style2"
            style={
              Object {
                "backgroundColor": "",
              }
            }
          >
            <div
              className="details-card-title"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="next-step"
    >
      <p>
        Wie entstehen diese Werte?
      </p>
    </div>
    <div
      className="card-layers"
    >
      <div>
        <div
          className="lower-square"
        />
        <div
          className="upper-square"
        />
      </div>
    </div>
  </div>
</div>
`;
